--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.27
+resolver: lts-20.6
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -42,8 +42,8 @@ packages:
 extra-deps:
 - nanovg-0.8.1.0
 - monomer-1.5.0.0
-#- git: https://github.com/fjvallarino/monomer
-#  commit: cb17cb553c76eea97718ff3953e516868c2b7087
+# - git: "https://github.com/fjvallarino/monomer"
+#   commit: "7b1d59d754d75588aae1097a231712264cf61719"
 
 # Override default flag values for local packages and extra-deps
 flags:
