--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -1,39 +1,190 @@
-name: Haskell CI
+# Runs on any push to main.
+# Produces optimised mac binaries and runs unit/doc/functional tests,
+# using the default stack.yaml's GHC version.
+
+name: Build binary on mac-x64
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        plan:
+          # - { ghc: "810" , stack: "stack --stack-yaml=stack8.10.yaml" }
+          # XXX func tests in bin should be run only with GHC 8.10 for now (see shelltest below) (?)
+          # - { ghc: "90" , stack: "stack --stack-yaml=stack9.0.yaml" }
+          # - { ghc: "92", stack: "stack --stack-yaml=stack.yaml" }
+          - { ghc: "92", stack: "stack" }
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: mstksg/setup-stack@v1
-    
-    - name: Cache
-      uses: actions/cache@v3
-      env:
-        cache-name: cache-stack
-      with:
-        path: ~/.stack-work
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/stack.yml') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+      - name: Check out
+        uses: actions/checkout@v2
+        # have to fetch everything for git describe for --version
+        with:
+          fetch-depth: 0
 
-    - name: Install dependencies
-      run: |
-        - stack --no-terminal --install-ghc test --only-dependencies
-    - name: Build
-      run: stack build --no-terminal
-    - name: Run tests
-      run: stack test
+      - name: Confirm all remaining steps should run
+        run: echo "CONTINUE=true" >> $GITHUB_ENV
+
+      # things to be cached/restored:
+
+      - name: Cache stack global package db
+        id: stack-global
+        uses: actions/cache@v2
+        with:
+          path: ~/.stack
+          key: ${{ runner.os }}-stack-global-${{ hashFiles('**.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-stack-global
+        if: env.CONTINUE
+
+      # - name: Cache stack-installed programs in ~/.local/bin
+      #   id: stack-programs
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ~/.local/bin
+      #     key: ${{ runner.os }}-stack-programs-${{ hashFiles('**.yaml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-stack-programs
+      #   if: env.CONTINUE
+      #
+      - name: Cache .stack-work
+        uses: actions/cache@v2
+        with:
+          path: .stack-work
+          key: ${{ runner.os }}-stack-work-${{ hashFiles('**.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-stack-work
+        if: env.CONTINUE
+
+      - name: Cache hledger-lib/.stack-work
+        uses: actions/cache@v2
+        with:
+          path: hledger-lib/.stack-work
+          key: ${{ runner.os }}-hledger-lib-stack-work-${{ hashFiles('hledger-lib/package.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-hledger-lib-stack-work
+        if: env.CONTINUE
+
+      - name: Cache hledger/.stack-work
+        uses: actions/cache@v2
+        with:
+          path: hledger/.stack-work
+          key: ${{ runner.os }}-hledger-stack-work-${{ hashFiles('hledger/package.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-hledger-stack-work
+        if: env.CONTINUE
+
+      # - name: Cache hledger-ui/.stack-work
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: hledger-ui/.stack-work
+      #     key: ${{ runner.os }}-hledger-ui-stack-work-${{ hashFiles('hledger-ui/package.yaml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-hledger-ui-stack-work
+      #   if: env.CONTINUE
+      #
+      # - name: Cache hledger-web/.stack-work
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: hledger-web/.stack-work
+      #     key: ${{ runner.os }}-hledger-web-stack-work-${{ hashFiles('hledger-web/package.yaml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-hledger-web-stack-work
+      #   if: env.CONTINUE
+      #
+      # actions:
+
+      - name: Install stack
+        # run: |
+        #   brew install haskell-stack
+        #   $stack --version
+        run: |
+          mkdir -p ~/.local/bin
+          export PATH=~/.local/bin:$PATH        
+          # brew install gnu-tar; curl -sL https://get.haskellstack.org/stable/osx-x86_64.tar.gz | gtar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'; chmod a+x ~/.local/bin/stack
+          if [[ ! -x ~/.local/bin/stack ]]; then brew install gnu-tar; curl -sL https://get.haskellstack.org/stable/osx-x86_64.tar.gz | gtar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'; chmod a+x ~/.local/bin/stack; fi
+          stack --version
+        if: env.CONTINUE
+
+      - name: Install GHC (with stack)
+        env:
+          stack: ${{ matrix.plan.stack }}
+        run: |
+          $stack setup --install-ghc
+        if: env.CONTINUE
+
+      # - name: Install GHC (with ghcup)
+      #   run: |
+      #     mkdir -p ~/.ghcup/bin && curl -sL https://downloads.haskell.org/~ghcup/x86_64-apple-darwin-ghcup > ~/.ghcup/bin/ghcup && chmod +x ~/.ghcup/bin/ghcup
+      #     ~/.ghcup/bin/ghcup install --set ghc 9.2.4  # && ~/.ghcup/bin/ghcup install stack
+      #     echo "$HOME/.ghcup/bin/" >> $GITHUB_PATH
+      #   if: env.CONTINUE
+
+      # - name: Install GHC (from haskell.org)
+      #   run: |
+      #     curl -sL https://downloads.haskell.org/~ghc/9.2.4/ghc-9.2.4-x86_64-apple-darwin.tar.xz | tar xj && cd ghc-9.2.4-x86_64-apple-darwin && ./configure && make install
+      #     ghc --version
+      #     mkdir -p ~/.stack && printf "system-ghc: true\ninstall-ghc: false\n" >>~/.stack/config.yaml
+      #   if: env.CONTINUE
+
+      - name: Install haskell deps
+        env:
+          stack: ${{ matrix.plan.stack }}
+        run: |
+          $stack build --test --only-dependencies --dry-run
+          $stack build --test --only-dependencies
+        if: env.CONTINUE
+
+      - name: Build the project and test unit tests, doc tests
+        env:
+          stack: ${{ matrix.plan.stack }}
+        run: |
+          $stack install --test --force-dirty --ghc-options=-fforce-recomp --pedantic
+          # --ghc-options=-split-sections doesn't work on mac
+          #  --pedantic
+        if: env.CONTINUE
+
+      # - name: Install shelltestrunner
+      #   env:
+      #     stack: ${{ matrix.plan.stack }}
+      #   run: |
+      #     export PATH=~/.local/bin:$PATH
+      #     if [[ ! -x ~/.local/bin/shelltest ]]; then $stack install shelltestrunner-1.9; fi
+      #     shelltest --version
+      #   if: env.CONTINUE
+      #
+      # - name: Test functional tests (excluding addons)
+      #   env:
+      #     stack: ${{ matrix.plan.stack }}
+      #   run: |
+      #     export PATH=~/.local/bin:$PATH
+      #     COLUMNS=80 $stack exec -- shelltest --execdir -j16 hledger/test -x /_ -x /addons -x ledger-compat/baseline -x ledger-compat/regress -x ledger-compat/collected # bin
+      #   if: env.CONTINUE
+      #
+      # artifacts:
+
+      - name: Gather binaries
+        run: |
+          mkdir -p tmp
+          cd tmp
+          cp ~/.local/bin/filenames .
+          strip filenames
+          tar cvf filenames-mac-x64.tar filenames
+        if: env.CONTINUE
+
+      # upload-artifact loses execute permissions, so we tar the binaries to preserve them.
+      # github UI always zips artifacts when they are downloaded, so we don't bother compressing the tar.
+      # Unfortunately it means users must both unzip and untar.
+      - name: Upload binaries artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: filenames-mac-x64
+          path: tmp/filenames-mac-x64.tar
+        if: env.CONTINUE
