--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -14,13 +14,6 @@ jobs:
     runs-on: macos-latest
     strategy:
       fail-fast: false
-      matrix:
-        plan:
-          # - { ghc: "810" , stack: "stack --stack-yaml=stack8.10.yaml" }
-          # XXX func tests in bin should be run only with GHC 8.10 for now (see shelltest below) (?)
-          # - { ghc: "90" , stack: "stack --stack-yaml=stack9.0.yaml" }
-          # - { ghc: "92", stack: "stack --stack-yaml=stack.yaml" }
-          - { ghc: "92", stack: "stack" }
 
     steps:
       - name: Check out
@@ -101,7 +94,7 @@ jobs:
       - name: Install stack
         # run: |
         #   brew install haskell-stack
-        #   $stack --version
+        #   stack --version
         run: |
           mkdir -p ~/.local/bin
           export PATH=~/.local/bin:$PATH        
@@ -114,7 +107,7 @@ jobs:
         env:
           stack: ${{ matrix.plan.stack }}
         run: |
-          $stack setup --install-ghc
+          stack setup --install-ghc
         if: env.CONTINUE
 
       # - name: Install GHC (with ghcup)
@@ -140,17 +133,16 @@ jobs:
         env:
           stack: ${{ matrix.plan.stack }}
         run: |
-          $stack build --test --only-dependencies --dry-run
-          $stack build --test --only-dependencies
+          stack build --test --only-dependencies --dry-run
+          stack build --test --only-dependencies
         if: env.CONTINUE
 
       - name: Build the project and test unit tests, doc tests
         env:
           stack: ${{ matrix.plan.stack }}
         run: |
-          $stack install --test --force-dirty --ghc-options=-fforce-recomp --pedantic
-          # --ghc-options=-split-sections doesn't work on mac
-          #  --pedantic
+          stack install --test --force-dirty --ghc-options=-fforce-recomp
+          # stack install --test --force-dirty --ghc-options=-fforce-recomp --pedantic
         if: env.CONTINUE
 
       # - name: Install shelltestrunner
@@ -158,7 +150,7 @@ jobs:
       #     stack: ${{ matrix.plan.stack }}
       #   run: |
       #     export PATH=~/.local/bin:$PATH
-      #     if [[ ! -x ~/.local/bin/shelltest ]]; then $stack install shelltestrunner-1.9; fi
+      #     if [[ ! -x ~/.local/bin/shelltest ]]; then stack install shelltestrunner-1.9; fi
       #     shelltest --version
       #   if: env.CONTINUE
       #
@@ -167,7 +159,7 @@ jobs:
       #     stack: ${{ matrix.plan.stack }}
       #   run: |
       #     export PATH=~/.local/bin:$PATH
-      #     COLUMNS=80 $stack exec -- shelltest --execdir -j16 filenames/test -x /_ -x /addons -x ledger-compat/baseline -x ledger-compat/regress -x ledger-compat/collected # bin
+      #     COLUMNS=80 stack exec -- shelltest --execdir -j16 filenames/test -x /_ -x /addons -x ledger-compat/baseline -x ledger-compat/regress -x ledger-compat/collected # bin
       #   if: env.CONTINUE
       #
       # artifacts:
