--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -2,7 +2,7 @@
 # Produces optimised mac binaries and runs unit/doc/functional tests,
 # using the default stack.yaml's GHC version.
 
-name: Build binary on mac-x64
+name: Build and release binary on mac-x64
 
 on:
   push:
