Start extracting to a new widget

--- a/filenames.cabal
+++ b/filenames.cabal
@@ -26,6 +26,7 @@ source-repository head
 executable filenames
   main-is: Main.hs
   other-modules:
+      FilteredDropdown
       Paths_filenames
   hs-source-dirs:
       src
